# wasip2-string-rust

./: Cargo.toml  README.md
src/: bindings.rs  lib.rs
wit/: world.wit
