[package]
name = "my-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { version = "0.27.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:my-lib"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:cli" = { path = "./wit/deps/cli" }
"wasi:io" = { path = "./wit/deps/io" }
"wasi:clocks" = { path = "./wit/deps/clocks" }
"wasi:filesystem" = { path = "./wit/deps/filesystem" }
"wasi:sockets" = { path = "./wit/deps/sockets" }
"wasi:random" = { path = "./wit/deps/random" }